# miniProject

./: CMakeLists.txt  README.md  fragment.sh.glsl  main.cpp  objects.cpp  objects.h  t.cpp  vertex.sh.glsl
